--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       - name: dock123-container
-        image: sandiriamulya/dock123:latest # Replace with your image name and tag
+        image: sandiriamulya/gitdocker/general:latest # Your Docker Hub image
         ports:
         - containerPort: 3000
         envFrom:
         - configMapRef:
-            name: dock123-config
+            name: dock123-config # Assuming you have a ConfigMap defined with this name
