--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: dock123-service
 spec:
+  type: LoadBalancer
   selector:
     app: dock123
   ports:
-  - protocol: TCP
-    port: 80
+  - port: 80
     targetPort: 3000
-  type: LoadBalancer
